rename to greenstone

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Redblock</title>
+    <title>Greenstone</title>
     <style>
         html, body {
             margin: 0;
