--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
             width: 100vmin;
             height: 100vmin;
         }
+        canvas {
+            image-rendering: optimizeSpeed;             /* Older versions of FF          */
+            image-rendering: -moz-crisp-edges;          /* FF 6.0+                       */
+            image-rendering: -webkit-optimize-contrast; /* Safari                        */
+            image-rendering: -o-crisp-edges;            /* OS X & Windows Opera (12.02+) */
+            image-rendering: pixelated;                 /* Awesome future-browsers       */
+            -ms-interpolation-mode: nearest-neighbor;   /* IE                            */
+        }
     </style>
 </head>
 <body>
     <div id="wrapper">
-        <div id="container"></div>
+        <canvas id="container"></canvas>
     </div>
     <script src="bundle.js"></script>
 </body>
